# pyndsi

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CommSpecs-2.md  MAINTENANCE.md  MANIFEST.in  NDSI-CommSpecs.md  README.md  SOURCE-INSTALL.md  clean-install.sh  example.py  files.txt  ndsi-commspec.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
examples/: example.py  fake_source.py  glfw.py  ndsi-client-example.py  ndsi-gui-client-example.py  ndsi-recv-events.py  ndsi-test-host.py  uvc-ndsi-bridge-host.py
ndsi/: __init__.py  cturbojpeg.pxd  device.c  device.pxd  device.pyx  formatter.py  frame.c  frame.cpp  frame.pxd  frame.pyx  h264.pxd  h264.pxi  h264_decoder.cpp  h264_decoder.h  network.c  network.cpp  network.pxd  network.py  network.pyx  sensor.c  sensor.cpp  sensor.pxd  sensor.py  sensor.pyx  windows_time.pxi  writer.cpp  writer.pxd  writer.pyx
ndsi/const/: __init__.py  action.py  control.py  dtype.py  event.py  key.py  status.py
ndsi/h264/: h264_decoder.cpp  h264_decoder.h  h264_utils.cpp  localdefines.h  media_stream.cpp  media_stream.h  mp4_writer.cpp  sensor_uvc.cpp  sensor_uvc.h  utilbase.h  video_stream.cpp  video_stream.h
ndsi/h264/windows/: getopt.cpp  unistd.h
pl_ndsi/: __init__.py  frame.pxd  frame.pyx  network.pyx  sensor.pxd  sensor.pyx  writer.pxd  writer.pyx
pl_ndsi/h264/: h264_utils.h
pl_ndsi/h264/windows/: getopt.h
scripts/: fetch-ffmpeg  fetch-vendor  fetch_libjpeg-turbo.sh  patch-ffmpeg-macos.py  prepare_linux_build.sh
src/: frame.pxi  ndsi.c  ndsi.pyx
src/ndsi/: __init__.py  cturbojpeg.pxd  errors.py  formatter.py  frame.pxd  frame.pyx  h264.pxd  network.py  sensor.py  writer.pxd  writer.pyx
src/ndsi/h264/: ffmpeg_utils.cpp  ffmpeg_utils.h  h264_decoder.cpp  h264_utils.cpp  localdefines.h  media_stream.cpp  mp4_writer.cpp  mp4_writer.h  video_stream.cpp
src/ndsi/h264/windows/: getopt.cpp  unistd.h
tests/: formatter_tests.py  test_formatter.py  test_network.py  test_sensor.py
