[metadata]
name = ndsi
description = "Remote Device Sensor Interface"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pupil-labs/pyndsi
author = "Pupil Labs"
author_email = "info@pupil-labs.com"
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: System :: Networking
project_urls =
    Changelog=https://github.com/pupil-labs/pyndsi/blob/master/CHANGELOG.md

[options]
packages = find:
install_requires =
    numpy
    pyzmq
    zeromq-pyre
    importlib-metadata;python_version<"3.8"
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    build
    bump2version
    pre-commit
    pytest
